modification de mon site web

--- a/index.html
+++ b/index.html
@@ -1,26 +1,59 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mon super site</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mon Site Web</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Bienvenue sur mon site !</h1>
-    <p>Ce site est hébergé gratuitement avec GitHub Pages.</p>
-  </header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">À propos</a></li>
+                <li><a href="#projects">Projets</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section>
-      <h2>À propos</h2>
-      <p>Voici une petite démo de site statique créé avec HTML et CSS.</p>
+    <section id="hero">
+        <h1>Bienvenue sur mon site</h1>
+        <p>Découvrez mes projets et mon parcours.</p>
     </section>
-  </main>
 
-  <footer>
-    <p>© 2025 MonSite. Tous droits réservés.</p>
-  </footer>
+    <section id="about">
+        <h2>À propos de moi</h2>
+        <p>Je suis un développeur passionné par la création de sites web modernes et interactifs.</p>
+    </section>
+
+    <section id="projects">
+        <h2>Mes Projets</h2>
+        <div class="project">
+            <h3>Projet 1</h3>
+            <p>Description du projet.</p>
+        </div>
+        <div class="project">
+            <h3>Projet 2</h3>
+            <p>Description du projet.</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contactez-moi</h2>
+        <form>
+            <label for="name">Nom :</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email :</label>
+            <input type="email" id="email" name="email" required>
+            <label for="message">Message :</label>
+            <textarea id="message" name="message" required></textarea>
+            <button type="submit">Envoyer</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Mon Site Web. Tous droits réservés.</p>
+    </footer>
 </body>
 </html>
