Modification du sit avec ajout de photos , modfication de certaines choses

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section light-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="">
+      <img src="assets/img/big-3520096_1920.jpg" alt="">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2> Konan Kramo</h2>
-            <p>Je suis <span class="typed" data-typed-items="Data science, passionné de nouvelles technologies">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>Je suis <span class="typed" data-typed-items="Data scientist, passionné de nouvelles technologies">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="#"><i class="bi bi-github"></i></a>
               <a href="#"><i class="bi bi-linkedin"></i></a>
@@ -92,7 +92,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Profil2.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>élève-ingénieur en Data science.</h2>
@@ -108,8 +108,8 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Diplôme:</strong> <span>élève ingenieur</span></li>
+                 <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>-->
+                  <li><i class="bi bi-chevron-right"></i> <strong>Diplôme:</strong> <span>élève ingenieur en Mathématiques appliquées et Intelligence Artificielle</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>fabriceemmanuel2@gmail.com</span></li>
                 </ul>
               </div>
@@ -170,56 +170,63 @@
       </div><!-- End Section Title -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="row skills-content text-center"></div>
+        <div class="row skills-content text-center">
 
-          <div class="col-lg-4">
-        <img src="assets/img/skills/c.png" alt="C" class="img-fluid mb-3">
-        <h4>C</h4>
+  <div class="col-lg-4 col-md-6 mb-4">
+    <img src="assets/img/icons8-c-programming-144.png" alt="C" class="img-fluid mb-3">
+    <h3>C</h3>
+  </div>
+
+  <div class="col-lg-4 col-md-6 mb-4">
+    <img src="assets/img/icons8-c++-144.png" alt="C++" class="img-fluid mb-3">
+    <h3>C++</h3>
+  </div>
+
+  <div class="col-lg-4 col-md-6 mb-4">
+    <img src="assets/img/icons8-java-144.png" alt="C++" class="img-fluid mb-3">
+    <h3>Java</h3>
+  </div>
+
+  <div class="col-lg-4 col-md-6 mb-4">
+    <img src="assets/img/icons8-c-96.png" alt="C#" class="img-fluid mb-3">
+    <h3>C#</h3>
+  </div>
+
+  <!-- idem pour les autres -->
+
+          <div class="col-lg-4 col-md-6 mb-4">
+        <img src="assets/img/icons8-python-144.png" alt="Python" class="img-fluid mb-3">
+        <h3>Python</h3>
           </div>
 
-          <div class="col-lg-4">
-        <img src="assets/img/skills/python.png" alt="Python" class="img-fluid mb-3">
-        <h4>Python</h4>
+          <div class="col-lg-4 col-md-6 mb-4">
+        <img src="assets/img/icons8-r-project-96.png" alt="R" class="img-fluid mb-3">
+        <h3>R Studio</h3>
           </div>
 
-          <div class="col-lg-4">
-        <img src="assets/img/skills/r.png" alt="R" class="img-fluid mb-3">
-        <h4>R</h4>
+          <div class="col-lg-4 col-md-6 mb-4">
+        <img src="assets/img/icons8-postgresql-144.png" alt="SQL" class="img-fluid mb-3">
+        <h3>PostgreSQL</h3>
           </div>
 
-          <div class="col-lg-4">
-        <img src="assets/img/skills/sql.png" alt="SQL" class="img-fluid mb-3">
-        <h4>SQL</h4>
+          <div class="col-lg-4 col-md-6 mb-4">
+        <img src="assets/img/icons8-matlab-96.png" alt="Matlab" class="img-fluid mb-3">
+        <h3>Matlab</h3>
           </div>
 
-          <div class="col-lg-4">
-        <img src="assets/img/skills/matlab.png" alt="Matlab" class="img-fluid mb-3">
-        <h4>Matlab</h4>
+          <div class="col-lg-4 col-md-6 mb-4">
+        <img src="assets/img/icons8-anaconda-96.png" alt="Anaconda" class="img-fluid mb-3">
+        <h3>Anaconda</h3>
           </div>
 
-          <div class="col-lg-4">
-        <img src="assets/img/skills/notebook.png" alt="Notebook" class="img-fluid mb-3">
-        <h4>Notebook</h4>
+          <div class="col-lg-4 col-md-6 mb-4">
+        <img src="assets/img/icons8-github-150.png" alt="GitHub" class="img-fluid mb-3">
+        <h3>Github</h3>
           </div>
 
-          <div class="col-lg-4">
-        <img src="assets/img/skills/anaconda.png" alt="Anaconda" class="img-fluid mb-3">
-        <h4>Anaconda</h4>
-          </div>
-
-          <div class="col-lg-4">
-        <img src="assets/img/skills/github.png" alt="GitHub" class="img-fluid mb-3">
-        <h4>GitHub</h4>
-          </div>
-
-          <div class="col-lg-4">
-        <img src="assets/img/skills/git.png" alt="Git" class="img-fluid mb-3">
-        <h4>Git</h4>
-          </div>
-
-          <div class="col-lg-4">
-        <img src="assets/img/skills/visualstudio.png" alt="Visual Studio" class="img-fluid mb-3">
-        <h4>Visual Studio</h4>
+          <div class="col-lg-4 col-md-6 mb-4">
+        <img src="assets/img/icons8-visual-studio-code-2019-144.png" alt="Visual Studio" class="img-fluid mb-3">
+        <h3>VS code</h3>
           </div>
 
         </div>
@@ -228,27 +235,30 @@
           <h3>Manipulation et Visualisation des Données</h3>
 
           <div class="col-lg-4">
-        <img src="assets/img/skills/pandas.png" alt="Pandas" class="img-fluid mb-3">
-        <h4>Pandas</h4>
+        <img src="assets/img/icons8-pandas-144.png" alt="Pandas" class="img-fluid mb-3">
+        <h3>Pandas</h3>
           </div>
 
           <div class="col-lg-4">
-        <img src="assets/img/skills/numpy.png" alt="NumPy" class="img-fluid mb-3">
-        <h4>NumPy</h4>
+        <img src="assets/img/icons8-numpy-144.png" alt="NumPy" class="img-fluid mb-3">
+        <h3>Numpy</h3>
           </div>
 
           <div class="col-lg-4">
-        <img src="assets/img/skills/matplotlib.png" alt="Matplotlib" class="img-fluid mb-3">
-        <h4>Matplotlib</h4>
+        <img src="assets/img/icons8-matplotlib-144.png" alt="Matplotlib" class="img-fluid mb-3">
+        <h3>Matplotlib</h3>
           </div>
 
         </div>
 
         <!-- Other Tools Section -->
+         <!--
         <div class="row skills-content text-center mt-5">
           <h3>Autres Outils</h3>
+          -->
 
           <!-- Add spaces for future tools -->
+           <!--
           <div class="col-lg-4">
         <img src="assets/img/skills/placeholder.png" alt="Tool Placeholder" class="img-fluid mb-3">
         <h4>Outil 1</h4>
@@ -263,14 +273,14 @@
         <img src="assets/img/skills/placeholder.png" alt="Tool Placeholder" class="img-fluid mb-3">
         <h4>Outil 3</h4>
           </div>
-        </div>
-
+        </div> 
+        -->
         <!-- Competences Metiers Section -->
-        <div class="row skills-content text-center mt-5">
-          <h3>Competences Metiers</h3>
+        <!--<div class="row skills-content text-center mt-5">
+          <h3>Competences Metiers</h3>-->
 
           <!-- Add spaces for future competences -->
-          <div class="col-lg-4">
+          <!--<div class="col-lg-4">
         <img src="assets/img/skills/placeholder.png" alt="Competence Placeholder" class="img-fluid mb-3">
         <h4>Competence 1</h4>
           </div>
@@ -284,55 +294,45 @@
         <img src="assets/img/skills/placeholder.png" alt="Competence Placeholder" class="img-fluid mb-3">
         <h4>Competence 3</h4>
           </div>
-        </div>
+        </div>-->
 
         <!-- Soft Skills Section -->
-        <div class="row skills-content text-center mt-5">
-          <h3>Soft Skills</h3>
+ <div class="skills-content text-center mt-5">
+  <h3 class="fs-1">Soft Skills</h3>
 
-          <div class="col-lg-4">
-        <h4>Autonomie</h4>
-          </div>
+  <ul style="list-style: none; padding: 0;">
+    <li><h4>Autonomie</h4></li>
+    <li><h4>Esprit d'équipe</h4></li>
+    <li><h4>Curiosité</h4></li>
+    <li><h4>Envie d'apprendre</h4></li>
+    <li><h4>Vulgarisation</h4></li>
+  </ul>
+</div>
 
-          <div class="col-lg-4">
-        <h4>Esprit d'équipe</h4>
-          </div>
-
-          <div class="col-lg-4">
-        <h4>Curiosité</h4>
-          </div>
-
-          <div class="col-lg-4">
-        <h4>Envie d'apprendre</h4>
-          </div>
-
-          <div class="col-lg-4">
-        <h4>Vulgarisation</h4>
-          </div>
-        </div>
 
         <div class="row skills-content text-center mt-5">
           <h3>Machine Learning et Deep Learning</h3>
 
           <!-- Add spaces for future skills -->
           <div class="col-lg-4">
-        <img src="assets/img/skills/placeholder.png" alt="Skill Placeholder" class="img-fluid mb-3">
-        <h4>Skill 1</h4>
+        <img src="assets/img/icons8-tensorflow-144.png" alt="Skill Placeholder" class="img-fluid mb-3">
+        <h4>Tensorflow</h4>
           </div>
 
           <div class="col-lg-4">
-        <img src="assets/img/skills/placeholder.png" alt="Skill Placeholder" class="img-fluid mb-3">
-        <h4>Skill 2</h4>
+        <img src="assets/img/Keras (2).png" alt="Skill Placeholder" class="img-fluid mb-3">
+        <h4>Keras</h4>
           </div>
 
           <div class="col-lg-4">
-        <img src="assets/img/skills/placeholder.png" alt="Skill Placeholder" class="img-fluid mb-3">
-        <h4>Skill 3</h4>
+        <img src="assets/img/scikit-learn (1).png" alt="Skill Placeholder" class="img-fluid mb-3">
+        <h4>Scikit-Learn</h4>
           </div>
         </div>
       </div>
 
           <!-- Add spaces for future skills -->
+           <!--
           <div class="col-lg-4">
         <img src="assets/img/skills/placeholder.png" alt="Skill Placeholder" class="img-fluid mb-3">
         <h4>Skill 1</h4>
@@ -347,7 +347,7 @@
         <img src="assets/img/skills/placeholder.png" alt="Skill Placeholder" class="img-fluid mb-3">
         <h4>Skill 3</h4>
           </div>
-        </div>
+        </div>-->
 
       </div>
 
@@ -371,17 +371,17 @@
 
             <div class="resume-item pb-0">
               <h4>Konan Kramo</h4>
-              <p><em>Élève-ingénieur en ingénierie mathématique et data science, passionné par l'intelligence artificielle et les applications concrètes des mathématiques. Curieux, motivé et doté d'un esprit d'équipe, je m'efforce d'apprendre et de relever des défis avec rigueur et créativité.</em></p>
+              <p><em>Élève-ingénieur en Mathématiques Appliquées et Intelligence Artificielle, passionné par l'intelligence artificielle et les applications concrètes des mathématiques. Curieux, motivé et doté d'un esprit d'équipe, je m'efforce d'apprendre et de relever des défis avec rigueur et créativité.</em></p>
               <div class="text-center"></div>
-              <a href="assets/files/mon_cv.pdf" class="btn btn-primary" download>Télécharger mon CV</a>
+              <a href="assets/files/Kramo_Fabrice_cv.pdf" class="btn btn-primary" download>Télécharger mon CV</a>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Ingénierie Mathématique et Data Science</h4>
+              <h4>Mathématiques Appliquées et Intelligence Artificielle</h4>
               <h5>2024 - 2027</h5>
               <p><em>Institut National Polytechnique Clermont Auvergne - Polytech Clermont, France</em></p>
-              <p>Formation d'ingénieur spécialisée en mathématiques appliquées et data science, avec un focus sur les applications concrètes et l'intelligence artificielle.</p>
+              <p>Formation d'ingénieur spécialisée en mathématiques appliquées et Intelligence Artificielle, avec un focus sur les applications industrielles concrètes.</p>
             </div><!-- End Resume Item -->
 
             <div class="resume-item">
@@ -398,27 +398,34 @@
               <p>Baccalauréat scientifique avec option mathématiques et sciences physiques, obtenu avec la mention Assez Bien.</p>
             </div><!-- End Resume Item -->
 
+            <!--
+
             <h3 class="resume-title">Certifications</h3>
             <div class="resume-item">
               <h4>Certification 1</h4>
               <h5>Année</h5>
               <p><em>Institution</em></p>
               <p>Description de la certification.</p>
-            </div><!-- End Certification Item -->
+            </div>--><!-- End Certification Item -->
 
+
+            <!--
             <div class="resume-item">
               <h4>Certification 2</h4>
               <h5>Année</h5>
               <p><em>Institution</em></p>
               <p>Description de la certification.</p>
-            </div><!-- End Certification Item -->
+            </div>--><!-- End Certification Item -->
 
+
+
+            <!--
             <div class="resume-item">
               <h4>Certification 3</h4>
               <h5>Année</h5>
               <p><em>Institution</em></p>
               <p>Description de la certification.</p>
-            </div><!-- End Certification Item -->
+            </div>--><!-- End Certification Item -->
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Contributions Associatives</h3>
@@ -437,7 +444,7 @@
             <div class="resume-item">
               <h4>Responsable du compte Drive de l'association filière IMDS</h4>
               <h5>2025 - Présent</h5>
-              <p><em>Ingénierie Mathématique et Data Science, Polytech Clermont</em></p>
+              <p><em>Mathématiques Appliquées et Intelligence Artificielle , Polytech Clermont</em></p>
               <ul>
               <li>Organisation et gestion de l'information : structuration, mise à jour et gestion d’un espace de ressources partagées pour toute la filière.</li>
               <li>Esprit d’initiative et rigueur : création de systèmes de classement efficaces, veille sur la qualité et la pertinence des documents.</li>
@@ -461,7 +468,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
         <p>"Le seul moyen de faire un excellent travail est d’aimer ce que vous faites." — Steve Jobs</p>
-        <p>Dans cette section, vous découvrirez les projets sur lesquels j’ai travaillé, illustrant ma passion pour la data science et les mathématiques appliquées. Chaque projet est une occasion de mettre en pratique mes compétences et de relever de nouveaux défis.</p>
+        <p>Dans cette section, vous découvrirez les projets sur lesquels j’ai travaillé, illustrant ma passion pour la data science , l'intelligence artficielle  et les mathématiques appliquées. Chaque projet est une occasion de mettre en pratique mes compétences et de relever de nouveaux défis.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
