--- a/index.html
+++ b/index.html
@@ -530,15 +530,52 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ml-data">
-              <img src="assets/img/masonry-portfolio/ml-data-project.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>ML/DATA Project</h4>
-                <p>Un projet en machine learning et data science.</p>
-                <a href="assets/img/masonry-portfolio/ml-data-project.jpg" title="ML/DATA Project" data-gallery="portfolio-gallery-ml-data" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+<div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-python filter-ml-data">
+  <img src="assets/img/masonry-portfolio/deep-learning.jpg" class="img-fluid" alt="Deep Learning">
+  
+  <div class="portfolio-info">
+    <h4>Deep Learning – TensorFlow</h4>
+    <p>Réseau de neurones entraîné avec TensorFlow.</p>
+    
+    <a href="https://github.com/Konan-ing/deep-learning-project" target="_blank" title="Voir le code">
+      <i class="bi bi-github" style="font-size: 1.5rem;"></i>
+    </a>
+
+    <div class="mt-3" style="background: rgba(255,255,255,0.1); padding: 10px; border-radius: 5px;">
+      <input type="number" id="inputUser" class="form-control form-control-sm" placeholder="Entrez un nombre">
+      <button onclick="testerIA()" class="btn btn-sm btn-primary mt-2 w-100">Prédire</button>
+      <p id="affichageResultat" class="mt-2 small text-success fw-bold"></p>
+    </div>
+  </div>
+</div>
+
+<script>
+async function testerIA() {
+  const val = document.getElementById('inputUser').value;
+  const texte = document.getElementById('affichageResultat');
+  
+  if(!val) return alert("Entrez un nombre");
+  
+  texte.innerText = "Calcul...";
+
+  try {
+    const response = await fetch('https://TON-URL-API.onrender.com/predict', {
+      method: 'POST',
+      headers: {'Content-Type': 'application/json'},
+      body: JSON.stringify({valeur: parseFloat(val)})
+    });
+    const data = await response.json();
+    texte.innerText = "IA : " + data.resultat.toFixed(4);
+  } catch (error) {
+    texte.innerText = "Erreur API.";
+  }
+}
+</script>
+
+  </a>
+</div>
+
+
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/masonry-portfolio/app-project.jpg" class="img-fluid" alt="">
