--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ async function testerIA() {
   texte.innerText = "Calcul...";
 
   try {
-    const response = await fetch('https://TON-URL-API.onrender.com/predict', {
+    const response = await fetch('https://mon-ia-api.onrender.com', {
       method: 'POST',
       headers: {'Content-Type': 'application/json'},
       body: JSON.stringify({valeur: parseFloat(val)})
