--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
       </div>
 
-        </section><!-- /Skills Section -->
+        </section><!-- /SkillFs Section -->
 
     <!-- Resume Section -->
     <section id="resume" class="resume section">
@@ -398,6 +398,42 @@
               <p>Baccalauréat scientifique avec option mathématiques et sciences physiques, obtenu avec la mention Assez Bien.</p>
             </div><!-- End Resume Item -->
 
+            <h3 class="resume-title">Experences Professionnelles</h3>
+            <div class="resume-item">
+              <h4>Stagiaire Base de données et Poste traitement automatisé en simulation acoustique</h4>
+              <h5>Mars 2026 - Juillet 2026</h5>
+              <p><em>Renault Ampere - Lardy, France</em></p>
+              <h4>Contexte</h4>
+              <p>Intégré au sein de l'equipe simulation acoustique , avec pour objectif d'optimiser l'exploitation des resultats de simulations via l'automatisation et l'analyse de données.</p>
+              <h4>
+                Missions principales
+              </h4>
+              <ul>
+                <li>
+                  Extraction, nettoyage et mutualisation de données issues de fichiers bruts de simulations acoustiques.
+                </li>
+                <li>
+                  Analyse des données et création de visualisations pertinentes (Data Visualization).
+                </li>
+                <li>
+                  Mise en place d’un post-traitement automatisé pour faciliter l’exploitation des résultats.
+                </li>
+                <li>
+                  Automatisation de la génération de rapports PowerPoint à partir des données traitées.
+                </li>
+              </ul>
+              <h4>Compétences mobilisées</h4>
+              <ul>
+              <li>Extraction, nettoyage et mutualisation de données issues de fichiers bruts de simulations acoustiques</li>
+              <li>Analyse des données et création de visualisations pertinentes (Data Visualization)</li>
+              <li>Mise en place d’un post-traitement automatisé pour faciliter l’exploitation des résultats</li>
+              <li>Automatisation de la génération de rapports PowerPoint à partir des données traitées</li>
+              </ul>
+            </div><!-- End Resume Item -->
+
+
+
+
             <!--
 
             <h3 class="resume-title">Certifications</h3>
@@ -442,7 +478,7 @@
             </div><!-- End Resume Item -->
 
             <div class="resume-item">
-              <h4>Responsable du compte Drive de l'association filière IMDS</h4>
+              <h4>Responsable du compte Drive de l'association filière</h4>
               <h5>2025 - Présent</h5>
               <p><em>Mathématiques Appliquées et Intelligence Artificielle , Polytech Clermont</em></p>
               <ul>
@@ -488,121 +524,13 @@
             <li data-filter=".filter-autre">AUTRE</li>
           </ul><!-- End Portfolio Filters -->
 
-          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+          <div id="portfolio-grid" class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+  </div><!--End Potfolio contenair-->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-python">
-              <img src="assets/img/masonry-portfolio/python-project.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Python Project</h4>
-                <p>Un projet utilisant Python pour l'analyse de données.</p>
-                <a href="assets/img/masonry-portfolio/python-project.jpg" title="Python Project" data-gallery="portfolio-gallery-python" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-pro">
-              <img src="assets/img/masonry-portfolio/pro-project.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Pro Project</h4>
-                <p>Un projet professionnel réalisé en entreprise.</p>
-                <a href="assets/img/masonry-portfolio/pro-project.jpg" title="Pro Project" data-gallery="portfolio-gallery-pro" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-perso">
-              <img src="assets/img/masonry-portfolio/perso-project.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Perso Project</h4>
-                <p>Un projet personnel pour explorer de nouvelles idées.</p>
-                <a href="assets/img/masonry-portfolio/perso-project.jpg" title="Perso Project" data-gallery="portfolio-gallery-perso" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-scolaire">
-              <img src="assets/img/masonry-portfolio/scolaire-project.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Scolaire Project</h4>
-                <p>Un projet académique réalisé dans le cadre de mes études.</p>
-                <a href="assets/img/masonry-portfolio/scolaire-project.jpg" title="Scolaire Project" data-gallery="portfolio-gallery-scolaire" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-<div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-python filter-ml-data">
-  <img src="assets/img/masonry-portfolio/deep-learning.jpg" class="img-fluid" alt="Deep Learning">
-  
-  <div class="portfolio-info">
-    <h4>Deep Learning – TensorFlow</h4>
-    <p>Réseau de neurones entraîné avec TensorFlow.</p>
-    
-    <a href="https://github.com/Konan-ing/deep-learning-project" target="_blank" title="Voir le code">
-      <i class="bi bi-github" style="font-size: 1.5rem;"></i>
-    </a>
-
-    <div class="mt-3" style="background: rgba(255,255,255,0.1); padding: 10px; border-radius: 5px;">
-      <input type="number" id="inputUser" class="form-control form-control-sm" placeholder="Entrez un nombre">
-      <button onclick="testerIA()" class="btn btn-sm btn-primary mt-2 w-100">Prédire</button>
-      <p id="affichageResultat" class="mt-2 small text-success fw-bold"></p>
-    </div>
-  </div>
-</div>
-
-<script>
-async function testerIA() {
-  const val = document.getElementById('inputUser').value;
-  const texte = document.getElementById('affichageResultat');
-  
-  if(!val) return alert("Entrez un nombre");
-  
-  texte.innerText = "Calcul...";
-
-  try {
-    const response = await fetch('https://mon-ia-api.onrender.com', {
-      method: 'POST',
-      headers: {'Content-Type': 'application/json'},
-      body: JSON.stringify({valeur: parseFloat(val)})
-    });
-    const data = await response.json();
-    texte.innerText = "IA : " + data.resultat.toFixed(4);
-  } catch (error) {
-    texte.innerText = "Erreur API.";
-  }
-}
-</script>
 
   </a>
 </div>
-
-
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/app-project.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>APP Project</h4>
-                <p>Un projet de développement d'application.</p>
-                <a href="assets/img/masonry-portfolio/app-project.jpg" title="APP Project" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-autre">
-              <img src="assets/img/masonry-portfolio/autre-project.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Autre Project</h4>
-                <p>Un projet diversifié dans un domaine différent.</p>
-                <a href="assets/img/masonry-portfolio/autre-project.jpg" title="Autre Project" data-gallery="portfolio-gallery-autre" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-          </div><!-- End Portfolio Container -->
-        </div>
-
-        </div>
-
-      </div>
 
     </section><!-- /Portfolio Section -->
 
@@ -814,6 +742,80 @@ async function testerIA() {
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+
+
+  <script>
+// 1. Fonction pour charger les projets depuis le fichier JSON
+async function chargerProjets() {
+  try {
+    const resp = await fetch('projets.json');
+    const projets = await resp.json();
+    const grid = document.getElementById('portfolio-grid');
+
+    grid.innerHTML = projets.map((p, index) => `
+      <div class="col-lg-4 col-md-6 portfolio-item isotope-item ${p.categorie}">
+        <img src="${p.image}" class="img-fluid" alt="${p.nom}">
+        <div class="portfolio-info">
+          <h4>${p.nom}</h4>
+          <p>${p.description}</p>
+          <div class="mt-3 p-2" style="background: rgba(0,0,0,0.05); border-radius: 8px;">
+            <input type="number" id="input-${index}" class="form-control form-control-sm mb-2" placeholder="Valeur à tester">
+            <button onclick="testerSurAzure('${p.apiUrl}', ${index})" class="btn btn-primary btn-sm w-100">Prédire via Azure</button>
+            <p id="res-${index}" class="mt-2 small mb-0"></p>
+          </div>
+        </div>
+      </div>
+    `).join('');
+
+    // Important : On demande à Isotope (le filtre) de se rafraîchir
+    setTimeout(() => {
+      window.AOS.refresh();
+      // Si votre template utilise Isotope, il faudra peut-être rajouter l'init ici
+    }, 500);
+
+    // --- AJOUTEZ CECI POUR LE FILTRAGE ---
+    imagesLoaded(grid, function() {
+      // On prévient Isotope qu'il y a de nouveaux éléments
+      let iso = new Isotope(grid, {
+        itemSelector: '.portfolio-item',
+        layoutMode: 'masonry'
+      });
+      window.AOS.refresh();
+    });
+
+  } catch (e) {
+    console.error("Erreur lors du chargement des projets :", e);
+  }
+}
+
+// 2. Fonction pour envoyer les données à votre API Azure
+async function testerSurAzure(url, id) {
+  const val = document.getElementById(`input-${id}`).value;
+  const resField = document.getElementById(`res-${id}`);
+  
+  if(!val) return alert("Veuillez entrer une valeur");
+
+  resField.innerText = "Calcul Azure...";
+  resField.style.color = "orange";
+  
+  try {
+    const r = await fetch(url, {
+      method: 'POST',
+      headers: {'Content-Type': 'application/json'},
+      body: JSON.stringify({ data: parseFloat(val) }) // Assurez-vous que votre API Azure attend bien 'data'
+    });
+    const data = await r.json();
+    resField.style.color = "green";
+    resField.innerText = "IA : " + (data.prediction || data.resultat);
+  } catch (e) {
+    resField.style.color = "red";
+    resField.innerText = "Erreur (vérifiez CORS sur Azure)";
+  }
+}
+
+// Lancer le chargement dès que la page est prête
+document.addEventListener('DOMContentLoaded', chargerProjets);
+</script>
 
 </body>
 
