--- a/index.html
+++ b/index.html
@@ -499,38 +499,22 @@
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Portfolio</h2>
+    <p>Mes projets et réalisations.</p>
+  </div>
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
-        <p>"Le seul moyen de faire un excellent travail est d’aimer ce que vous faites." — Steve Jobs</p>
-        <p>Dans cette section, vous découvrirez les projets sur lesquels j’ai travaillé, illustrant ma passion pour la data science , l'intelligence artficielle  et les mathématiques appliquées. Chaque projet est une occasion de mettre en pratique mes compétences et de relever de nouveaux défis.</p>
-      </div><!-- End Section Title -->
+  <div class="container">
+    <ul class="portfolio-filters isotope-filters" data-aos="fade-up">
+      <li data-filter="*" class="filter-active">All</li>
+      <li data-filter=".filter-python">Python</li>
+      <li data-filter=".filter-ml-data">ML/DATA</li>
+    </ul>
 
-      <div class="container">
-
-        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
-
-          </div>
-
-          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-python">Python</li>
-            <li data-filter=".filter-pro">Pro</li>
-            <li data-filter=".filter-perso">Perso</li>
-            <li data-filter=".filter-scolaire">Scolaire</li>
-            <li data-filter=".filter-ml-data">ML/DATA</li>
-            <li data-filter=".filter-app">APP</li>
-            <li data-filter=".filter-autre">AUTRE</li>
-          </ul><!-- End Portfolio Filters -->
-
-          <div id="portfolio-grid" class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
-  </div><!--End Potfolio contenair-->
-
-
-
-  </a>
-</div>
+    <div id="portfolio-grid" class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+    </div> 
+  </div>
+</section>
 
     </section><!-- /Portfolio Section -->
 
@@ -745,12 +729,15 @@
 
 
   <script>
-// 1. Fonction pour charger les projets depuis le fichier JSON
 async function chargerProjets() {
+  const grid = document.getElementById('portfolio-grid');
+  if (!grid) return; // Sécurité : on arrête si l'élément n'est pas trouvé
+
   try {
     const resp = await fetch('projets.json');
+    if (!resp.ok) throw new Error("Fichier projets.json introuvable");
+    
     const projets = await resp.json();
-    const grid = document.getElementById('portfolio-grid');
 
     grid.innerHTML = projets.map((p, index) => `
       <div class="col-lg-4 col-md-6 portfolio-item isotope-item ${p.categorie}">
@@ -759,32 +746,26 @@ async function chargerProjets() {
           <h4>${p.nom}</h4>
           <p>${p.description}</p>
           <div class="mt-3 p-2" style="background: rgba(0,0,0,0.05); border-radius: 8px;">
-            <input type="number" id="input-${index}" class="form-control form-control-sm mb-2" placeholder="Valeur à tester">
-            <button onclick="testerSurAzure('${p.apiUrl}', ${index})" class="btn btn-primary btn-sm w-100">Prédire via Azure</button>
+            <input type="number" id="input-${index}" class="form-control mb-2" placeholder="Valeur">
+            <button onclick="testerSurAzure('${p.apiUrl}', ${index})" class="btn btn-primary btn-sm w-100">Prédire</button>
             <p id="res-${index}" class="mt-2 small mb-0"></p>
           </div>
         </div>
       </div>
     `).join('');
 
-    // Important : On demande à Isotope (le filtre) de se rafraîchir
-    setTimeout(() => {
-      window.AOS.refresh();
-      // Si votre template utilise Isotope, il faudra peut-être rajouter l'init ici
-    }, 500);
-
-    // --- AJOUTEZ CECI POUR LE FILTRAGE ---
-    imagesLoaded(grid, function() {
-      // On prévient Isotope qu'il y a de nouveaux éléments
-      let iso = new Isotope(grid, {
-        itemSelector: '.portfolio-item',
-        layoutMode: 'masonry'
-      });
-      window.AOS.refresh();
-    });
+    // On attend que les images soient chargées avant d'activer le design
+    if (typeof imagesLoaded === 'function') {
+        imagesLoaded(grid, function() {
+            // Initialisation de l'effet de tri (Isotope)
+            new Isotope(grid, { itemSelector: '.portfolio-item', layoutMode: 'masonry' });
+            window.AOS.refresh();
+        });
+    }
 
   } catch (e) {
-    console.error("Erreur lors du chargement des projets :", e);
+    console.error("Erreur critique :", e);
+    grid.innerHTML = "<p class='text-danger'>Erreur de chargement des projets.</p>";
   }
 }
 
