--- a/index.html
+++ b/index.html
@@ -508,6 +508,7 @@
 
   <!-- Main JS -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/portfolio.js"></script>
 
   <!-- Custom client-side JS : chargement des projets & appels serveur -->
   <script>
